--- a/miniprogram/pages/mainPage/accMile/accMile.wxss
+++ b/miniprogram/pages/mainPage/accMile/accMile.wxss
@@ -1,112 +1,130 @@
-#i0{
-  width:100rpx;
-  height:100rpx;
-  position: relative;
-left: 224rpx;
-  top:663rpx;
-  background-color: white;
+#map{
+  
+  border: 2rpx solid black;
 }
-#t1{
-  width:200rpx;
-  height:100rpx;
+#i0 {
+  width: 50rpx;
+  height: 50rpx;
+  position: relative;
+  left: 275rpx;
+  top: 20rpx;
+
+}
+
+#time{
+  margin-left: 10rpx;
+  font-size: 50rpx;
+}
+#t1 {
+  width: 200rpx;
+  height: 50rpx;
   left: 325rpx;
-  background-color: white;
-  position: relative;
-  top:563rpx;
-}
-#i1{
-  width:100rpx;
-  height:100rpx;
+  bottom: 30rpx;
   position: relative;
 
-  top:700rpx;
 }
-#t2{
-  width:200rpx;
-  height:100rpx;
+
+#i1 {
+  width: 50rpx;
+  height: 50rpx;
+  position: relative;
+  left: 50rpx;
+  top: 100rpx;
+
+}
+
+#t2 {
+  width: 200rpx;
+  height: 50rpx;
   left: 98rpx;
-  background-color: white;
-  top:601rpx;
+
+top: 50rpx;
   position: relative;
-}
-#i2{
-  width:100rpx;
-  height:100rpx;
-  position: relative;
-left: 452rpx;
-  top:502rpx;
-}
-#t3{
-  width:400rpx;
-  height:100rpx;
-  left: 550rpx;
-  background-color: white;
-  position: relative;
-  top:403rpx;
 }
 
-#t1 text{
-position: relative;
-left:10rpx;
-top:30rpx;
-color: rgb(143, 143, 143);
-}
-#use{
-  width:400rpx;
-  height:80rpx;
-  margin-left: 200rpx;
+#i2 {
+  width: 50rpx;
+  height: 50rpx;
   position: relative;
-  bottom: 25rpx;
+  left: 460rpx;
+
 }
-#t2 text{
-position: relative;
-left:20rpx;
-top:30rpx;
-color: rgb(143, 143, 143);
+
+#t3 {
+  width: 400rpx;
+  height: 50rpx;
+  left: 515rpx;
+  position: relative;
+  bottom: 60rpx;
 }
-#pass1{
-  width:400rpx;
-  height:80rpx;
+
+#t1 text {
+  position: relative;
+
+  color: rgb(143, 143, 143);
+}
+
+#use {
+  width: 400rpx;
+  height: 80rpx;
   margin-left: 200rpx;
   position: relative;
   bottom: 25rpx;
 }
 
-#t3 text{
-position: relative;
-left:20rpx;
-top:30rpx;
-color: rgb(143, 143, 143);
+#t2 text {
+  position: relative;
+
+  color: rgb(143, 143, 143);
 }
-#pass2{
-  width:400rpx;
-  height:80rpx;
+
+#pass1 {
+  width: 400rpx;
+  height: 80rpx;
   margin-left: 200rpx;
   position: relative;
   bottom: 25rpx;
 }
 
-#btn1{
+#t3 text {
   position: relative;
-  top:512rpx;
+
+  color: rgb(143, 143, 143);
+}
+
+#pass2 {
+  width: 400rpx;
+  height: 80rpx;
+  margin-left: 200rpx;
+  position: relative;
+  bottom: 25rpx;
+}
+
+#btn1 {
+  position: relative;
+
   left: -219rpx;
-  background-color:rgb(51, 204, 170);
-  width:250rpx;
+  background-color: rgb(51, 204, 170);
+  width: 250rpx;
   border-radius: 50rpx;
+  top: 85rpx;
 }
-#btn1 text{
-  color:white;
+
+#btn1 text {
+  color: white;
   font-size: 39rpx;
 }
-#btn2{
+
+#btn2 {
   position: relative;
-  top:431rpx;
-  background-color:red;
-  width:250rpx;
+
+  background-color: red;
+  width: 250rpx;
   left: 213rpx;
   border-radius: 50rpx;
 }
-#btn2 text{
-  color:white;
+
+#btn2 text {
+  color: white;
   font-size: 39rpx;
 }
